# research-assistant

./: LICENSE  Makefile  README.md  pyproject.toml
report_agent/: main.py  utils.py
report_agent/config/: configuration.py
report_agent/models/: dependencies.py  schema.py  states.py
report_agent/nodes/: report.py  section.py
report_agent/prompts/: __init__.py
report_agent/search/: client.py
reports/: report_20241227_153550.md  report_20241227_160611.md  report_20241227_230558.md
